update login and headerbase html, change frontpage styles

--- a/code/app/static/css/login.css
+++ b/code/app/static/css/login.css
@@ -4,7 +4,7 @@
 }
 
 .registration-form form{
-    background-color: #043f2b72;
+    background-color: #0759583a;
     max-width: 600px;
     margin: auto;
     padding: 50px 70px;
@@ -34,7 +34,7 @@
     width: 25%;
     font-size: 18px;
     font-weight: bold;
-    background-color: #043f2b72;
+    background-color: #075958;
     border: none;
     color: white;
     margin-top: 20px;
