--- a/code/app/templates/base.html
+++ b/code/app/templates/base.html
@@ -54,7 +54,7 @@
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li><a class="nav-link scrollto" href="#service">Service</a></li>
           {% if loggedin %}
-          <li><a class="scrollto" href="/logout">Logout</a></li>
+          <li><a class="getstarted scrollto" href="/logout">Logout</a></li>
           {% else %}
           <li><a class="getstarted scrollto" href="/login">Sign in</a></li>
           {% endif %}
