--- a/code/app/templates/headerbase.html
+++ b/code/app/templates/headerbase.html
@@ -36,7 +36,7 @@
       <nav id="navbar" class="navbar">
           <ul>
             {% if loggedin %}
-            <li><a class="scrollto" href="/logout">Logout</a></li>
+            <li><a class="getstarted scrollto" href="/logout">Logout</a></li>
             {% else %}
             <li><a class="getstarted scrollto" href="/login">Sign in</a></li>
             {% endif %}
