added register style and merged last commit changes
extending login base style and added nicolas chnages on username and password flask messages

--- a/code/app/templates/register.html
+++ b/code/app/templates/register.html
@@ -1,40 +1,20 @@
-{% extends "headerbase.html" %}
+{% include "headerbase.html" %}
+{% extends "loginRegisterBase.html" %}
+
 {% block content %}
-<html>
-  <body>
-    <center><br><br><br>
-    {% if loggedin %}
-      <div class="container">
-        Already logged in
-      </div>
-    {% else %}
-    <div class="container">
-      <div class="header">
-        <h3 class="text-muted">Registration</h3>
-      </div>
-
-      <div>
-        <form method="POST">
-            {{form.csrf_token}}<br>
-            {{form.account_type.label}}
-            {{form.account_type()}}<br><br>
-            {{form.username.label}}
-            {{form.username()}}<br><br>
-            {{form.password.label}}
-            {{form.password()}}<br><br>
-            {{form.submit()}}
-        </form>
-        <div>
-            {{"This username already exists" if user_exists else ""}}<br>
-            {{"There are no agencies with that name" if agency_invalid else ""}}<br>
-            {{"Please make sure your username is at least 4 characters long" if username_too_short else ""}}<br>
-            {{"Please make sure your password is at least 8 characters long" if password_too_short else ""}}<br>
-
-        </div>
-      </div>
-    </div>
-    {% endif %}
-  </body>
-</html>
+{{form.csrf_token}}
+<h2>Register</h2>
+<br>
+<h5 class='text' align='left'>Register as a</h5>
+{{form.account_type(class="form-control item btn btn-secondary dropdown-toggle")}}
+{{form.username(class="form-control item", placeholder='Username')}}
+{{form.password(class="form-control item", placeholder='Password')}}
+{{form.submit(class="btn btn-block create-account")}}
+<div><br>
+  {{"This username already exists" if user_exists else ""}}<br>
+  {{"There are no agencies with that name" if agency_invalid else ""}}<br>
+  {{"Please make sure your username is at least 4 characters long" if username_too_short else ""}}<br>
+  {{"Please make sure your password is at least 8 characters long" if password_too_short else ""}}<br>
+</div>
 
 {%endblock%}
