--- a/code/app/static/css/test.css
+++ b/code/app/static/css/test.css
@@ -12,9 +12,14 @@ ul{
 
 
 .card-text{
-    text-align:left;    
+    text-align:left;
+    line-height:3;
 }    
 
 .card-title{
-    text-align:left;    
+    text-align:left; 
+    padding-top: 7px;
+    color: #376b69;
 }    
+
+
