--- a/code/app/templates/patient.html
+++ b/code/app/templates/patient.html
@@ -70,39 +70,40 @@
 
       <div class="tab-content" id="tabContent">
         <!-- Available Pane -->
-        <form method="POST">
+<!--         <form method="POST"> -->
+        <!-- Available Pane -->
         <div class="tab-pane active" id="available" role="tabpanel" aria-labelledby="available-tab">
-          <div class="container">
-            <table class="table table-hover">
-              <thead>
-                <tr>
-                  {% for col_name in columns %}
-                  <th scope="col">{{col_name}}</th>
+          <form method="POST">
+            <div class="container">
+              <table class="table table-hover">
+                <thead>
+                  <tr>
+                    {% for col_name in columns %}
+                    <th scope="col">{{col_name}}</th>
+                    {% endfor %}
+                  </tr>
+                </thead>
+                <tbody>
+                  {% for row in data_available %}
+                  <tr>
+                    {% for cell in row %}
+                    <td>{{cell}}</td>
+                    {% endfor %}
+                    <td><button type="button" class="btn btn-success" onclick="requestRec('{{row[0]-1}}');">
+                      Request
+                    </button></td>
+                    <td><input type="checkbox" name="{{row[1]}}"></td>
+                    <td><button type="button" class="btn btn-warning" onclick="removeRec('{{row[0]-1}}');">
+                      <i class="bi bi-trash"></i>
+                    </button></td>
+                  </tr>
                   {% endfor %}
-                </tr>
-              </thead>
-              <tbody>
-                {% for row in data_available %}
-                <tr>
-                  {% for cell in row %}
-                  <td>{{cell}}</td>
-                  {% endfor %}
-                  <td><button type="button" class="btn btn-success" onclick="requestRec('{{row[0]-1}}');">
-                    Request
-                  </button></td>
-                  <td><input type="checkbox" name="{{row[1]}}"></td>
-
-                  <td><button type="button" class="btn btn-warning" onclick="removeRec('{{row[0]-1}}');">
-                    <i class="bi bi-trash"></i>
-                  </button></td>
-                </tr>
-                {% endfor %}
-              </tbody>
-            </table>
-          </div>
+                </tbody>
+              </table>
+            </div>
+            <button type="submit" name="compare" value="company.index" style="margin-left:45%">Compare</button>
+          </form>
         </div>
-        <button type="submit" name="compare" value="company.index" style="margin-left:45%">Compare</button>
-      </form>
         <!-- Requested Pane -->
         <div class="tab-pane" id="requested" role="tabpanel" aria-labelledby="requested-tab">
           <div class="container">
