--- a/code/app/templates/patient.html
+++ b/code/app/templates/patient.html
@@ -30,7 +30,7 @@
                 <strong>{{patient.first}}'s recommendations:</strong>
             </div>
             <div align="left" style="color:#211F1F;font-size:22px">
-            <br>Below are agencies that serve <p style="display:inline;color:#376b69"><strong>{{patient.zipcode}}</strong></p> and offer
+            <br>Below are top 20 agencies for {{patient.first}} that serve <p style="display:inline;color:#376b69"><strong>{{patient.zipcode}}</strong></p> and offer
             {% if specific_services|length == 1 %}
                 <p style="display:inline;color:#376b69"><strong>{{specific_services[0]}}</strong></p>.
             {% elif specific_services|length == 2 %}
