fix first letter cutout issue

--- a/code/app/templates/dashboard.html
+++ b/code/app/templates/dashboard.html
@@ -57,7 +57,7 @@
                 {% for i in range(num_agencies) %}
                 <div class="col-xl">
                     <div class="card bg-light mb-3">
-                    <h5 class="card-header" style="color: {{colors_arr[i]}};">{{name_arr[i][1:-1][0:25].title()}}</h5>
+                    <h5 class="card-header" style="color: {{colors_arr[i]}};">{{name_arr[i][0:25].title()}}</h5>
                     </div>
                 </div>
                 {% endfor %}
